Fixing spacing issues

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -121,7 +121,6 @@ hr {
 }
 
 iframe {
-  margin: 0;
   border: 0;
   outline: 0;
   border-radius: 4px;
